--- a/View/QuanLyNguoiDungView.xaml
+++ b/View/QuanLyNguoiDungView.xaml
@@ -11,9 +11,11 @@
         WindowStyle="None"
         WindowStartupLocation="Manual"
         Title="Quản lý Người Dùng" Height="770" Width="1165"
-        Name="QLNDView"
-        Background="Transparent">
-    <Grid Margin="10">
+        Name="QLNDView">
+    <Window.Background>
+        <ImageBrush ImageSource="/Resources/44.jpg"/>
+    </Window.Background>
+    <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition></RowDefinition>
@@ -103,7 +105,7 @@
                                   VerticalAlignment="Center" 
                                   Margin="-50,10,0,0" 
                                   Foreground="Orange" 
-                                  HorizontalAlignment="Right"/> 
+                                  HorizontalAlignment="Right"/>
                         </StackPanel>
                     </StackPanel>
                     <!-- Nút chức năng -->
