--- a/View/CoSoThuocBVTV.xaml
+++ b/View/CoSoThuocBVTV.xaml
@@ -14,7 +14,10 @@
         WindowStartupLocation="Manual"
         Background="Transparent">
 
-    <Grid Margin="10">
+    <Grid Margin="0">
+        <Grid.Background>
+            <ImageBrush ImageSource="/Resources/55.jpg"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition></RowDefinition>
