--- a/View/LichSuTruyCapView.xaml
+++ b/View/LichSuTruyCapView.xaml
@@ -11,9 +11,11 @@
         WindowStyle="None"
         WindowStartupLocation="Manual"
         Name="LSTCView"
-        Title="Quản lý Lịch Sử Truy Cập" Height="770" Width="1165"
-        Background="Transparent">
-    <Grid Margin="10">
+        Title="Quản lý Lịch Sử Truy Cập" Height="770" Width="1165">
+    <Window.Background>
+        <ImageBrush ImageSource="/Resources/44.jpg"/>
+    </Window.Background>
+    <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition></RowDefinition>
