--- a/View/LoaiCoSoView.xaml
+++ b/View/LoaiCoSoView.xaml
@@ -21,7 +21,10 @@
         Title="Quản lý loại cơ sở" Height="770" Width="1165">
 
 
-    <Grid Margin="10">
+    <Grid Margin="0">
+        <Grid.Background>
+            <ImageBrush ImageSource="/Resources/55.jpg"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition></RowDefinition>
