--- a/View/CoSoThuocBVTVView.xaml
+++ b/View/CoSoThuocBVTVView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="adc.View.CoSoThuocBVTVVuew"
+﻿<Window x:Class="adc.View.CoSoThuocBVTVView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:uc="clr-namespace:adc.UserControllADC"
