--- a/View/SinhVatGayHaiTuoiSauView.xaml
+++ b/View/SinhVatGayHaiTuoiSauView.xaml
@@ -160,50 +160,50 @@
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border  Padding="5" CornerRadius="5">
-                                                <TextBlock Text="ID" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="30"/>
+                                                <TextBlock Text="ID" Foreground="Black" FontWeight="Bold" TextAlignment="Center" />
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding ID}" TextAlignment="Center" Foreground="Black" Width="100"/>
+                                                <TextBlock Text="{Binding ID}" TextAlignment="Center" Foreground="Black" Width="60"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
 
                                 <!-- Cột Tên sinh vật -->
-                                <GridViewColumn Width="160">
+                                <GridViewColumn Width="240">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border  Padding="5" CornerRadius="5">
-                                                <TextBlock Text="Tên SV" Foreground="black" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                                <TextBlock Text="Tên SV" Foreground="black" FontWeight="Bold" TextAlignment="Center" Width="120"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding TenSinhVat}" TextAlignment="Center" Foreground="Black" Width="160"/>
+                                                <TextBlock Text="{Binding TenSinhVat}" TextAlignment="Center" Foreground="Black" Width="150"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
 
                                 <!-- Cột Loại sinh vật -->
-                                <GridViewColumn Width="130">
+                                <GridViewColumn Width="180">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border  Padding="5" CornerRadius="5">
-                                                <TextBlock Text="Loại SV" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="60"/>
+                                                <TextBlock Text="Loại SV" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="120"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding LoaiSinhVat}" TextAlignment="Center" Foreground="Black" Width="130"/>
+                                                <TextBlock Text="{Binding LoaiSinhVat}" TextAlignment="Center" Foreground="Black" Width="160"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
@@ -214,50 +214,50 @@
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border  Padding="5" CornerRadius="5">
-                                                <TextBlock Text="Tuổi sâu" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="60"/>
+                                                <TextBlock Text="Tuổi sâu" Foreground="Black" FontWeight="Bold" TextAlignment="Center" />
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding TuoiSau}" TextAlignment="Center" Foreground="Black" Width="130"/>
+                                                <TextBlock Text="{Binding TuoiSau}" TextAlignment="Center" Foreground="Black" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
 
                                 <!-- Cột Cấp độ phổ biến -->
-                                <GridViewColumn Width="120">
+                                <GridViewColumn Width="130">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border Padding="5" CornerRadius="5">
-                                                <TextBlock Text="Cấp độ" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="50"/>
+                                                <TextBlock Text="Cấp độ" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="70"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding CapDoPhoBien}" TextAlignment="Center" Foreground="Black" Width="120"/>
+                                                <TextBlock Text="{Binding CapDoPhoBien}" TextAlignment="Center" Foreground="Black" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
 
                                 <!-- Cột Mô tả -->
-                                <GridViewColumn Width="120">
+                                <GridViewColumn Width="200">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border Padding="5" CornerRadius="5">
-                                                <TextBlock Text="Mô tả" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="50"/>
+                                                <TextBlock Text="Mô tả" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="140"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding MoTa}" TextAlignment="Center" Foreground="Black"/>
+                                                <TextBlock Text="{Binding MoTa}" TextAlignment="Center" Foreground="Black" Width="190"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
@@ -275,7 +275,7 @@
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5" CornerRadius="5">
-                                                <TextBlock Text="{Binding VungTrongID}" TextAlignment="Center" Foreground="Black" Width="160"/>
+                                                <TextBlock Text="{Binding VungTrongID}" TextAlignment="Center" Foreground="Black" Width="110"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
